Add all items on the sidebar

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 .wrapper {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 4fr;
     grid-template-areas: "sidebar header"
                          "sidebar main-content";
@@ -23,6 +23,13 @@ body {
     grid-area: sidebar;
     background-color: #0ea5e9;
     color: aliceblue;
+    font-weight: bold;
+    font-size: 1.5rem;
+    padding-left: 20px;
+    padding-top: 20px;
+    /* display: grid;
+    grid-template-columns: 1fr 9fr; */
+
 }
 
 .header {
@@ -33,4 +40,32 @@ body {
     grid-area: main-content;
 }
 
+.dashboard {
+    display: grid;
+    grid-template-columns: 1fr 9fr;
+    font-size: 2rem;
+    gap: 15px;
+
+}
+
+.account {
+    padding-top: 3rem;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 9fr;
+    gap: 15px 15px;
+
+}
+
+
+.settings {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 9fr;
+    gap: 15px 15px;
+    padding-top: 4rem;
+}
+img {
+    /* justify-self: end; */
+}
 /* f056E */
