--- a/style.css
+++ b/style.css
@@ -45,6 +45,13 @@ body {
     grid-area: main-content;
 }
 
+/* ######################## */
+/* ######################## */
+/* START OF DASHBOARD */
+/* ######################## */
+/* ######################## */
+
+
 .dashboard {
     display: grid;
     grid-template-columns: 1fr 9fr;
@@ -70,6 +77,18 @@ body {
     gap: 15px 15px;
     padding-top: 4rem;
 }
+
+/* ######################## */
+/* ######################## */
+/* END OF DASHBOARD */
+/* ######################## */
+/* ######################## */
+
+/* ######################## */
+/* ######################## */
+/* START OF HEADER */
+/* ######################## */
+/* ######################## */
 
 .header {
     display: grid;
@@ -168,3 +187,10 @@ button {
     font-weight: bold;
     /* margin: 10px */
 }
+
+/* ######################## */
+/* ######################## */
+/* END OF HEADER */
+/* ######################## */
+/* ######################## */
+
