--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
     padding: 15px 30px;
+    background-color: #fefce8; 
 }
 
 .upper {
@@ -194,3 +195,75 @@ button {
 /* ######################## */
 /* ######################## */
 
+
+/* ######################## */
+/* ######################## */
+/* START OF MAIN-CONTENT */
+/* ######################## */
+/* ######################## */
+
+.main-content {
+    display: grid;
+    grid-template-columns: 2.5fr 1fr;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 65px;
+    gap: 17px;
+    background-color: #e5e7eb;
+
+}
+
+.main-left {
+    display: grid;
+    grid-template-rows: 65px 1fr;
+    gap: 17px;
+}
+
+.your-projects {
+    font-size: 1.6rem;
+    font-weight: bold;
+    align-self: end;
+}
+
+.project-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 15px 15px;
+}
+
+.card {
+    border-radius: 10px;
+    background-color: #fefce8;
+    border-left: 10px solid #eab308;
+
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-areas: "card-header ."
+                         "card-content card-content"
+                         ". card-footer";
+
+    gap: 1ch;
+    padding: 3ch 3ch;
+}
+
+.card-header {
+    grid-area: card-header;
+    align-self: end;
+    font-weight: bolder;
+    font-size: 1.2rem;
+}
+
+.card-content {
+    grid-area: card-content;
+    color: #4b5563;
+    font-size: 1rem;
+}
+
+.card-footer {
+    grid-area: card-footer;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 3ch;
+}
