--- a/style.css
+++ b/style.css
@@ -3,16 +3,16 @@
 }
 
 body {
-    width: 100vw;
+    max-width: 100vw;
     height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     /* max-width: 100%; */
     /* border: 1px solid red; */
 }
 
-.wrapper > * {
+/* .wrapper > * {
     border: 1px solid black;
-}
+} */
 
 .wrapper {
     display: grid;
@@ -94,8 +94,9 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
+    gap: 3ch;
     padding: 15px 30px;
-    background-color: #fefce8; 
+    background-color: #fefce8;
 }
 
 .upper {
@@ -210,7 +211,7 @@ button {
     padding-bottom: 65px;
     gap: 17px;
     background-color: #e5e7eb;
-
+    box-shadow: inset 0px 10px 8px 0px rgba(209,209,209,1);
 }
 
 .main-left {
@@ -246,6 +247,7 @@ button {
 
     gap: 1ch;
     padding: 3ch 3ch;
+    box-shadow: 10px 10px 8px 0px rgba(209,209,209,1);
 }
 
 .card-header {
